--- a/entry1/entry1.html
+++ b/entry1/entry1.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<a class="Start" href="file:///Users/chensixing/Desktop/project%201/entry%202/entry2.html">4 Tears — Frank Ocean</a>
+<a class="Start" href="file:///Users/chensixing/Desktop/project%201/entry%202/entry2.html">4 Tears —— Frank Ocean</a>
 
 </body>
 </html>
