--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -11,10 +11,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
-<a1 class="Start" href="file:///Users/chensixing/Desktop/project%201/entry%202/entry2.html"></a1>
-<a2 class="Start" href="file:///Users/chensixing/Desktop/project%201/entry%202/entry2.html"></a2>
-<a3 class="Start" href="file:///Users/chensixing/Desktop/project%201/entry%202/entry2.html"></a3>
+    <div class="container">
+<a href="https://sixingch.github.io/project-1-sixing/entries/entry2/entry2.html"><img src="asset/tear1.svg" alt="tear1"></a>
+<a href="https://sixingch.github.io/project-1-sixing/entries/entry3/entry3.html"><img src="asset/tear2.svg" alt="tear2"></a>
+<a href="https://sixingch.github.io/project-1-sixing/entries/entry4/entry4.html"><img src="asset/tear3.svg" alt="tear3"></a>
+<a href="https://sixingch.github.io/project-1-sixing/entries/entry5/entry5.html"><img src="asset/tear4.svg" alt="tear4"></a>
+</div>
+<div class="container2">
+    <p1>tear 1</p1>
+    <p2>tear 2</p2>
+    <p3>tear 3</p3>
+    <p4>tear 4</p4>
 </div>
 </body>
 </html>
