--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -12,16 +12,10 @@
 </head>
 <body>
     <div class="container">
-<a href="https://sixingch.github.io/project-1-sixing/entries/entry2/entry2.html"><img src="asset/tear1.svg" alt="tear1"></a>
-<a href="https://sixingch.github.io/project-1-sixing/entries/entry3/entry3.html"><img src="asset/tear2.svg" alt="tear2"></a>
-<a href="https://sixingch.github.io/project-1-sixing/entries/entry4/entry4.html"><img src="asset/tear3.svg" alt="tear3"></a>
-<a href="https://sixingch.github.io/project-1-sixing/entries/entry5/entry5.html"><img src="asset/tear4.svg" alt="tear4"></a>
-</div>
-<div class="container2">
-    <p1>tear 1</p1>
-    <p2>tear 2</p2>
-    <p3>tear 3</p3>
-    <p4>tear 4</p4>
+<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry2/entry2.html"><img  src="asset/tear1.svg" alt="tear1">tear 1</a>
+<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry3/entry3.html"><img  src="asset/tear2.svg" alt="tear2">tear 2</a>
+<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry4/entry4.html"><img  src="asset/tear3.svg" alt="tear3">tear 3</a>
+<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry5/entry5.html"><img  src="asset/tear4.svg" alt="tear4">tear 4</a>
 </div>
 </body>
 </html>
