--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
-
+    <a class="q" href="https://sixingch.github.io/project-1-sixing/entries/entry3/entry3.html">but I don't cry</a>
+    <div class="notear"><img src="asset/no tear.svg" alt="no tear"></div>
 </body>
 </html>
