--- a/entries/entry3/entry3.html
+++ b/entries/entry3/entry3.html
@@ -16,6 +16,6 @@
 <body>
 <p1 class="Q">I don't cry </p1>
 <p2 class="W">cause</p2>
-<a class="E" href="file:///Users/chensixing/Desktop/project%201/entry4/entry4.html">I'M STRONG<a>
+<div class="E"><a class="link" href="https://sixingch.github.io/project-1-sixing/entries/entry4/entry4.html">I'M STRONG<a></div>
 </body>
 </html>
