--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="asset/entry4.css">
-    <link rel="reset" href="asset/reset copy 4.css">
+    <link rel="stylesheet" href="asset/entry8.css">
+    <link rel="reset" href="asset/reset copy 8.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Oxanium:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -14,6 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="https://sixingch.github.io/project-1-sixing/entries/entry5/entry5.html" class="q">I don't cry cause <span class="w">nothing lasts forever</span><a>
+<div class="container">
+    <div class="textnormal"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
+    <div class="textnormal2"><span class="c">c</span><span class="h2">h</span> <span class="i">i</span> <span class="l">l</span> <span class="O">d</span></div>
+    <div class="textreflected"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
+    <div class="textreflected2"><span class="c">c</span><span class="h2">h</span><span class="i">i</span><span class="l">l</span><span class="O">d</span></div>
+    <a href="https://sixingch.github.io/project-1-sixing/entries/entry8/entry8.html"><img class="mouthclose" src="asset/mouth-01.png" alt="close"></a>
+</div>
+
 </body>
 </html>
