--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -16,8 +16,8 @@
 <body>
     <a1 class="q">I don't cry</a1>
     <p class="w">cause</p>
-    <a2 class="e"><span>KIDS</span><br>
-        <span>ARE</span><br>
-        <span>GROWN</span><a2>
+    <a2 href="https://sixingch.github.io/project-1-sixing/entries/entry6/entry6.html"class="e"><span class="z">KIDS</span><br>
+        <span class="x">ARE</span><br>
+        <span class="c">GROWN</span><a2>
 </body>
 </html>
