--- a/entries/entry6/entry6.html
+++ b/entries/entry6/entry6.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="asset/entry4.css">
-    <link rel="reset" href="asset/reset copy 4.css">
+    <link rel="stylesheet" href="asset/entry6.css">
+    <link rel="reset" href="asset/reset copy 6.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Oxanium:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="https://sixingch.github.io/project-1-sixing/entries/entry5/entry5.html" class="q">I don't cry cause <span class="w">nothing lasts forever</span><a>
+    <a href="https://sixingch.github.io/project-1-sixing/entries/entry7/entry7.html" class="hover-text">I don't cry</a>
+<p class="another-text">AT ALL</p>
+
 </body>
 </html>
