--- a/entries/entry9/entry9.html
+++ b/entries/entry9/entry9.html
@@ -20,6 +20,7 @@
     <div class="textreflected"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
     <div class="textreflected2"><span class="c">c</span><span class="h2">h</span><span class="i">i</span><span class="l">l</span><span class="O">d</span></div>
     <a href="https://sixingch.github.io/project-1-sixing/entries/entry8/entry8.html"><img class="mouthclose" src="asset/mouth-02.png" alt="close"></a>
+    <a1 class="next" href="https://sixingch.github.io/project-1-sixing/entries/entry10/entry10.html">next</a1>
 </div>
 
 </body>
