--- a/entries/entry9/entry9.html
+++ b/entries/entry9/entry9.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Document</title>
     <link rel="stylesheet" href="asset/entry9.css">
     <link rel="reset" href="asset/reset copy 9.css">
@@ -15,12 +15,10 @@
 </head>
 <body>
 <div class="container">
-    <div class="textnormal"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
-    <div class="textnormal2"><span class="c">c</span><span class="h2">h</span> <span class="i">i</span> <span class="l">l</span> <span class="O">d</span></div>
-    <div class="textreflected"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
-    <div class="textreflected2"><span class="c">c</span><span class="h2">h</span><span class="i">i</span><span class="l">l</span><span class="O">d</span></div>
-    <a href="https://sixingch.github.io/project-1-sixing/entries/entry8/entry8.html"><img class="mouthclose" src="asset/mouth-02.png" alt="close"></a>
-    <a1 class="next" href="https://sixingch.github.io/project-1-sixing/entries/entry10/entry10.html">next</a1>
+    <div class="textnormal"><span class="O">O</span><span class="o2">o</span><span class="h">h</span><span class="c">c</span><span class="h2">h</span><span class="i">i</span><span class="l">l</span><span class="O">d</span></div>
+   
+    <a href="https://sixingch.github.io/project-1-sixing/entries/entry10/entry10.html"><img class="mouthclose" src="asset/mouth-02.png" alt="close"></a>
+
 </div>
 
 </body>
