--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -17,10 +17,7 @@
 <body>
 
 <div class="container">
-    <div class="textnormal"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
-    <div class="textnormal2"><span class="c">c</span><span class="h2">h</span> <span class="i">i</span> <span class="l">l</span> <span class="O">d</span></div>
-    <div class="textreflected"><span class="O">O</span><span class="o2">o</span><span class="h">h</span></div>
-    <div class="textreflected2"><span class="c">c</span><span class="h2">h</span><span class="i">i</span><span class="l">l</span><span class="O">d</span></div>
+    <div class="textnormal"><span class="O">O</span><span class="o2">o</span><span class="h">h</span><span class="c">c</span><span class="h2">h</span><span class="i">i</span><span class="l">l</span><span class="O">d</span></div>
     <a href="https://sixingch.github.io/project-1-sixing/entries/entry9/entry9.html"><img class="mouthclose" src="asset/mouth-01.png" alt="close"></a>
 </div>
 
