--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p1 class="line">wanna see my 4 tears?</p1>
+    <p1 class="line"><span class="change"></span></p1>
     <div class="container">
 <a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry2/entry2.html"><img  src="asset/tear1.svg" alt="tear1">tear 1</a>
 <a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry2/entry2.html"><img  src="asset/tear2.svg" alt="tear2">tear 2</a>
