--- a/entries/entry12/entry12.html
+++ b/entries/entry12/entry12.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11</title>
-    <link rel="stylesheet" href="asset/entry11.css">
-    <link rel="reset" href="asset/reset copy 11.css">
+    <link rel="stylesheet" href="asset/entry12.css">
+    <link rel="reset" href="asset/reset copy 12.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Oxanium:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -17,7 +17,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-<a href="https://sixingch.github.io/project-1-sixing/entries/entry12/entry12.html" class="line">But when the <span class="sun">sun sets</span>, just right, ooh I might, <span class="tear1"></span>.</a>
-
+    <div class="main">
+    <p class="hits" style="display: inline-block; margin: 20;">And when the good word hits</p>
+    <a href="https://sixingch.github.io/project-1-sixing/entries/entry13/entry13.html" class="home" style="display: inline-block; margin: 20;">home, I'll shed <span class="tear2"></span></a>
 </body>
 </html>
