--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -18,7 +18,6 @@
     <div class="container">
 <a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry11/entry11.html"><img  src="asset/tear1.svg" alt="tear1">tear 1</a>
 <a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry12/entry12.html"><img  src="asset/tear2.svg" alt="tear2">tear 2</a>
-<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry13/entry13.html"><img  src="asset/tear3.svg" alt="tear3">tear 3</a>
-<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry14/entry15.html"><img  src="asset/tear4.svg" alt="tear4">tear 4</a>
+<a class="image-box" href="https://sixingch.github.io/project-1-sixing/entries/entry13/entry13.html"><img  src="asset/tear3.svg" alt="tear3">tear 3&4</a>
 </body>
 </html>
