--- a/entries/entry14/entry14.html
+++ b/entries/entry14/entry14.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12</title>
-    <link rel="stylesheet" href="asset/entry12.css">
-    <link rel="reset" href="asset/reset copy 12.css">
+    <title>14</title>
+    <link rel="stylesheet" href="asset/entry14.css">
+    <link rel="reset" href="asset/reset copy 14.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Oxanium:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -17,7 +16,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="https://sixingch.github.io/project-1-sixing/entries/entry13/entry13.html" class="main"> And when the good word <span class="hits">hits</span> <span class="home"> home, I'll shed <span class="tear2"></span></span>. </a>
-   
+   <p class="q">Now that's four tears<br>you got enough?<br></p>
+   <a class="back" href="//sixingch.github.io/project-1-sixing/entries/entry1/entry1.html">wanna see again? :(</a>
+
 </body>
 </html>
