--- a/entries/entry13/entry13.html
+++ b/entries/entry13/entry13.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12</title>
-    <link rel="stylesheet" href="asset/entry12.css">
-    <link rel="reset" href="asset/reset copy 12.css">
+    <title>13</title>
+    <link rel="stylesheet" href="asset/entry13.css">
+    <link rel="reset" href="asset/reset copy 13.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Oxanium:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sixtyfour+Convergence&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -17,7 +17,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="https://sixingch.github.io/project-1-sixing/entries/entry13/entry13.html" class="main"> And when the good word <span class="hits">hits</span> <span class="home"> home, I'll shed <span class="tear2"></span></span>. </a>
-   
+    <a href="//sixingch.github.io/project-1-sixing/entries/entry14/entry14.html" class="link">But if the sun shines too beautiful, I might, I'll shed <div class="tear3"></div> </a>
 </body>
 </html>
